# face4d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  median.sql
docs/: achievement.md  algorithm.md  app.md  build.md  challenge.md  code.md  construct.md  coverpage.md  dev.md  end.md  flow.md  history.md  index.html  introduction.md  problem.md  reference.md  sidebar.md
docs/assets/css/: theme-defaults.css  theme-simple-dark.css  theme-simple.css
docs/assets/js/: ._.eslintrc.js  docsify-pagination.min.js  docsify-tabs@1.js  docsify-themeable@0.js  external-script.min.js  prism-bash.min.js  search.js  zoom-image.min.js
docs/static/gif/: 2d-3.032a90b.MOV
src/: .gitmodules
src/include/eos/render/: draw_utils.hpp  utils.hpp
